--- a/Frontend/Angular/FrontendPedidos/package.json
+++ b/Frontend/Angular/FrontendPedidos/package.json
@@ -21,6 +21,8 @@
     "@types/crypto-js": "^4.0.2",
     "crypto-js": "^4.1.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-captcha": "^11.0.0",
+    "react-google-recaptcha": "^2.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
